# poligran-operational-systems

./: Punto B.docx  README.md  main.py  pyproject.toml
week5/: PaginatorProgram.java  default_ids_to_download.txt  multithread_program.py
week7/: Log.txt  multithread_program_final.py  punto D.docx  semana7SistemasOperacionales.docx
