[tool.poetry]
name = "poligran-operational-systems"
version = "0.1.0"
description = ""
authors = ["cristian-rincon <cristian.o.rincon.b@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
loguru = "^0.6.0"
httpx = "^0.23.0"
colorama = "^0.4.4"
tqdm = "^4.64.0"
tabulate = "^0.8.9"
click-spinner = "^0.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
